readable brand colors, some mobile bug fixes

--- a/source/css/base/_typography.scss
+++ b/source/css/base/_typography.scss
@@ -1,8 +1,6 @@
-// globaltypography 
+// global typography 
 
 body {
-  width: 100%;
-  height: 100%;
   font-family: adobe-garamond-pro,Times,sans-serif;
   font-weight: 400;
   color: $copy;
@@ -10,12 +8,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1,h2,h3,h4,h5,h6 {
   margin: $base-spacing * 2 0 $base-spacing;
   font-family: "Montserrat", "Helvetica Neue",Helvetica,Arial,sans-serif;
   font-weight: 400;
@@ -25,12 +18,7 @@ h6 {
 }
 
 #archive, article {
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
+  h1,h2,h3,h4,h5,h6 {
     color: $copy;
   }
 }
